# TileGlobeMC

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
client/: build.gradle
client/src/main/kotlin/dev/shblock/tileglobemc/: TileGlobeMC.kt
client/src/main/kotlin/dev/shblock/tileglobemc/datagen/: BlocksDatagen.kt
client/src/main/resources/: tileglobemc.mixins.json
hardware/: .gitignore
hardware/Lib/: MCU_RaspberryPi_RP2350.kicad_sym  Project.kicad_sym
hardware/Lib/Project.pretty/: BC-15-5P380.kicad_mod  BC-20-5PD160.kicad_mod  BS-24-B___014.kicad_mod  FPC_Verticle_24pin_0.5mm.kicad_mod  PinHeader_1x05_P2.54mm_Horizontal_NoSilk.kicad_mod  PinSocket_1x05_P2.54mm_Horizontal_NoSilk.kicad_mod  RP2350-QFN-80-1EP_10x10_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  VQFN-16-1EP_3x3mm_P0.5mm_EP1.68x1.68mm_ThermalVias.kicad_mod
hardware/SnapNodes_RP2/: Core.kicad_sch  Peripheral.kicad_sch  SnapNodes_RP2.kicad_pcb  SnapNodes_RP2.kicad_prl  SnapNodes_RP2.kicad_pro  SnapNodes_RP2.kicad_sch  fp-lib-table  sym-lib-table
hardware/TileGlobeMC_Node/: Core.kicad_sch  Peripheral.kicad_sch  Power.kicad_sch  TileGlobeMC_Node.kicad_pcb  TileGlobeMC_Node.kicad_prl  TileGlobeMC_Node.kicad_pro  TileGlobeMC_Node.kicad_sch  fp-lib-table
hardware/cad/: .gitignore  SnapNodes_RP2.py  pyproject.toml
neoforge/: .gitignore  build.gradle  gradle.properties
neoforge/src/main/kotlin/dev/shblock/tileglobemc/: TileGlobeMC.kt
neoforge/src/main/kotlin/dev/shblock/tileglobemc/datagen/: BlockDefDatagen.kt  BlocksDatagen.kt
runtime/pc/: Cargo.toml
runtime/pc/src/: main.rs
runtime/rp2350/: Cargo.toml  build.rs  memory.x
runtime/rp2350/src/: main.rs
tileglobe/: Cargo.toml
tileglobe/src/: lib.rs
tileglobe/src/master_node/: mcclient.rs  mod.rs  utils.rs
tileglobe/src/network/: mcpacket.rs  mod.rs  primitives.rs  string.rs  uuid.rs  varint.rs
tileglobe/src/server/: mod.rs
tileglobe/src/utils/: indexed_enum.rs  mod.rs
tileglobe/src/world/: chunk.rs  dimension.rs  mod.rs  world.rs
tileglobe/src/world/block/: block.rs  misc.rs  mod.rs  registry.rs
tileglobe/src/world/block/blocks/: generic.rs  lever.rs  mod.rs  redstone_block.rs  redstone_comparator.rs  redstone_lamp.rs  redstone_repeater.rs  redstone_torch.rs  redstone_wire.rs
tileglobe/src/world/utils/: direction.rs  mod.rs
tileglobe_proc_macro/: Cargo.toml
tileglobe_proc_macro/src/: blocks.rs  lib.rs  utils.rs
tileglobe_runtime/core_rp2/: Cargo.toml
tileglobe_runtime/core_rp2/src/: main.rs
tileglobe_runtime/fruit_jam/: Cargo.toml
tileglobe_runtime/fruit_jam/.cargo/: config.toml
tileglobe_runtime/fruit_jam/src/: main.rs
tileglobe_runtime/pc/: Cargo.toml
tileglobe_runtime/pc/src/: main.rs
tileglobe_runtime/rp2350/: Cargo.toml
tileglobe_runtime/rp2350/src/: main.rs
tileglobe_server/: Cargo.toml
tileglobe_server/src/: lib.rs  mc_client.rs  mc_server.rs  player.rs  utils.rs
tileglobe_server/src/network/: enums.rs  mc_packet.rs  mod.rs  primitives.rs  string.rs  uuid.rs  varint.rs
tileglobe_utils/: Cargo.toml
tileglobe_utils/src/: color.rs  direction.rs  indexed_enum.rs  lib.rs  pos.rs  resloc.rs
tileglobe_utils/src/network/: bitbuf.rs  block_pos.rs  bool.rs  bytebuf.rs  enums.rs  mc_packet.rs  mod.rs  primitives.rs  uuid.rs  varint.rs
