[workspace]
resolver = "3"
members = [
    "tileglobe",
    "runtime/pc",
    "runtime/rp2350"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0" }
embassy-sync = { version = "0.7.2" }
embassy-net = { version = "0.7.1", features = ["alloc", "tcp", "proto-ipv4", "medium-ethernet"] }
embedded-io-async = "0.6.1"

heapless = "0.8.0"
static_cell = "2.1.1"

defmt = "1.0.1"
log = "0.4.28"
defmt-or-log = "0.2.2"