[package]
name = "tileglobe"
version = "0.1.0"
edition.workspace = true

[dependencies]
tileglobe_utils = { path = "../tileglobe_utils" }
tileglobe_proc_macro = { path = "../tileglobe_proc_macro" }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }

libm = { workspace = true }
glam = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "into"] }
num-traits = { workspace = true }
dynify = { workspace = true }
smallvec = { workspace = true }

defmt-or-log = { workspace = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt"]
log = ["dep:log", "defmt-or-log/log"]