[package]
name = "tileglobe"
version = "0.1.0"
edition.workspace = true

[dependencies]
tileglobe_utils = { path = "../tileglobe_utils" }
tileglobe_proc_macro = { path = "../tileglobe_proc_macro" }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embedded-io-async = { workspace = true }

libm = { workspace = true }
glam = { workspace = true }
derive_more = { workspace = true, features = ["display", "from", "into"] }
num-traits = { workspace = true }
dynify = { workspace = true }
smallvec = { workspace = true }
itertools = { workspace = true }
ordered-float = { version = "5.1.0", default-features = false }

defmt-or-log = { workspace = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }

embassy-rp = { version = "0.8.0", path = "../embassy/embassy-rp", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "binary-info",
    "defmt"
], optional = true }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt"]
log = ["dep:log", "defmt-or-log/log"]
rp = ["dep:embassy-rp"]