[package]
name = "tileglobe_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
tileglobe_utils = { path = "../tileglobe_utils" }
tileglobe = { path = "../tileglobe" }

embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embedded-io-async = { workspace = true }

num-traits = { workspace = true }
glam = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
smallvec = { workspace = true }
derive_more = { workspace = true, features = ["debug", "display", "from", "into", "deref", "deref_mut"] }
dynify = { workspace = true }
const_for = "0.1.5"

defmt-or-log = { workspace = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt"]
log = ["dep:log", "defmt-or-log/log"]