[package]
name = "tileglobe_utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
embedded-io-async = { workspace = true }

num-traits = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true, features = ["debug", "display", "from", "into"] }
uuid = { workspace = true }

defmt-or-log = { workspace = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt"]
log = ["dep:log", "defmt-or-log/log"]
std = ["log"]