[package]
name = "tileglobe-runtime-rp2350"
version = "0.1.0"
edition.workspace = true
#forced-target = "thumbv8m.main-none-eabihf"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tileglobe = { path = "../../tileglobe", features = ["defmt"] }

embassy-executor = { workspace = true, features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt"
] }
embassy-time = { workspace = true }
embassy-rp = { version = "0.8.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "binary-info",
    "defmt"
] }

static_cell = { workspace = true }

defmt = { workspace = true }

embedded-alloc = "0.6.0"

defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/rp2350" }
]

[features]
default = ["rp2350b"]
rp2350a = ["embassy-rp/rp235xa"]
rp2350b = ["embassy-rp/rp235xb"]