[package]
name = "tileglobe_runtime_fruit_jam"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tileglobe_runtime_fruit_jam"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tileglobe_utils = { path = "../../tileglobe_utils", features = ["defmt"] }
tileglobe = { path = "../../tileglobe", features = ["defmt", "rp"] }
tileglobe_server = { path = "../../tileglobe_server", features = ["defmt"] }
tileglobe_proc_macro = { path = "../../tileglobe_proc_macro" }

embassy-executor = { workspace = true, features = [
    "arch-cortex-m",
    "executor-interrupt",
    "defmt"
] }
embassy-time = { workspace = true, features = ["defmt"] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-futures = { workspace = true }
embassy-rp = { version = "0.8.0", path = "../../embassy/embassy-rp", features = [
    "rp235xb",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "binary-info",
    "defmt"
] }
embassy-net = { workspace = true, features = ["defmt", "dhcpv4"] }
embassy-net-esp-hosted = { version = "0.2.1", path = "../../embassy/embassy-net-esp-hosted", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

static_cell = { workspace = true }
heapless = { workspace = true }

defmt = { workspace = true }

embedded-alloc = "0.6.0"

defmt-rtt = "1.1.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/rp2350" }
]