[package]
name = "tileglobe_runtime_pc"
version = "0.1.0"
edition.workspace = true

[dependencies]
tileglobe = { path = "../../tileglobe", features = ["log"] }
tileglobe_server = { path = "../../tileglobe_server", features = ["log"] }

embassy-executor = { workspace = true, features = ["arch-std", "log"] }
embassy-time = { workspace = true, features = ["std", "log"] }
embassy-sync = { workspace = true, features = ["std", "log"] }
embedded-io-async = { workspace = true }
embedded-io-adapters = { version = "0.6.1", features = ["std", "futures-03"] }
critical-section = { workspace = true, features = ["std"] }

heapless = { workspace = true }
static_cell = { workspace = true }

log = { workspace = true }
env_logger = "0.11.8"

rand_core = { version = "0.9.3", features = ["std", "os_rng"] }
async-net = "2.0.0"